--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     <name>Resume</name>
     <description>Resume</description>
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>15</java.version>
+<!--        <maven.compiler.source>17</maven.compiler.source>-->
+<!--        <maven.compiler.target>17</maven.compiler.target>-->
     </properties>
     <dependencies>
         <dependency>
